Fixed sketch overflow.

--- a/src/components/sketch/SketchGraphic.module.css
+++ b/src/components/sketch/SketchGraphic.module.css
@@ -1,6 +1,7 @@
 @import "../../styles/variables.css";
 
 .root {
+  margin: auto;
   width: var(--col4);
   height: auto;
   position: relative;
